<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_learn_word"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="Потеха"
        android:src="@drawable/ic_close"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:orientation="vertical"
        android:layout_marginTop="86dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:id="@+id/layoutAnswer1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/shape_rounded_container"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVariatnNumber1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="1"
                android:textColor="#888992"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvVariantValue1"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewVariantStyle"
                android:text="@string/option_destroy" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAnswer2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_container"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVariantNumber2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="2"
                android:textColor="#888992"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvVariantValue2"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewVariantStyle"
                android:text="@string/option_galaxy" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_container"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="3"
                android:textColor="#888992"
                android:textSize="16sp" />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewVariantStyle"

                android:text="@string/option_utug" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_container"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="4"
                android:textColor="#888992"
                android:textSize="16sp" />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewVariantStyle"
                android:text="@string/option_sleep" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="310dp"
        android:layout_height="58dp"
        android:text="Skip"
        android:textAllCaps="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="33dp"
        android:text="@string/galaxy"
        android:fontFamily="@font/nunito_bold"
        android:textSize="50sp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExit"
        tools:text="Galaxy" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCorrect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="#0EAD69"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_height="136dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_correct"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/btnCorrectSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="310dp"
            android:height="58dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/button_continue"
            android:textAllCaps="true"
            android:textColor="#0EAD69"
            android:backgroundTint="@color/white"
            android:background="@drawable/shape_rounded_footer"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            tools:layout_editor_absoluteY="54dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutWrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/wrongAnswerColor"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_height="136dp">

        <ImageView
            android:id="@+id/svgWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_wrong"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/btnWrongSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="310dp"
            android:height="58dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/button_continue"
            android:textAllCaps="true"
            android:textColor="@color/wrongAnswerColor"
            android:backgroundTint="@color/white"
            android:background="@drawable/shape_rounded_footer"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/svgWrong"
            tools:layout_editor_absoluteY="54dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>